# DVA315

./: test.c
Lab 3_newer/: server.c
Lab 3_newer/Lab 3/: CMakeLists.txt  Lab3_Eng.docx  Project_setup.odt  client.c  server.c
Lab_4/: Lab4  Lab4_sched.odt  Makefile  main.c
Lab_5/: Lab5  Lab5_Page_Replacement.docx  Makefile  felixfinafrågor.txt  main.c
lab1/: -g  Lab1  Makefile  intro  intro.c  intro2  main.c  mk  wrapper.c
lab1.2/: 4b  CMakeLists.txt  intro2.c  mk  wrapper.c  wrapper.h
lab1.3/: 4b  CMakeLists.txt  Lab1  intro.c  intro2.c  mk  wrapper.c  wrapper.h
lab2/: Lab 2.odt  Lab2  Makefile  Makefile_old  app  app_old  main.c  main_old.c  rapport.fdb_latexmk  rapport.fls  rapport.tex
lab3/: CMakeCache.txt  CMakeLists.txt  Makefile  RUN_CLIENT  RUN_SERVER  client.c  cmake_install.cmake  install.txt  notes.txt  server.c  wrapper.c  wrapper.h
lab3felix/: client.c  server.c  wrapper.c  wrapper.h
lab4/: Lab4  Makefile  main.c  scheduler
